--- a/_mnemosyne/personnes.html
+++ b/_mnemosyne/personnes.html
@@ -83,11 +83,11 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/fontawesome.js"></script>
 <script src="js/isotope.pkgd.min.js"></script>
-<script src="js/isotope-familles.js"></script>
+<script src="js/isotope-personnes.js"></script>
 <footer>
     <a class="copyright" href="#">
         <span class="icone"><i class="fas fa-skull-crossbones" aria-hidden="true"></i></span>
-        <span class="titre">@nicolasbellet.com</span>
+        <span class="titre"><a href="https://ahcarrement.fr/">ahcarrément.fr</a></span>
         </a>
 </footer>
 </html>
